--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,11 @@ jobs:
 
      #do the same with another action (actions/setup-java@v3) that enable to setup jdk 17
       - name: Set up JDK 17
-        uses: actions/setup-java@3
-      	with : 
-      		java-version: 17
-      		distribution: "adopt"
+        uses: actions/setup-java@v3
+        with : 
+      	    java-version: 17
+      	    distribution: "adopt"
 
      #finally build your app with the latest command
-      - name: Build and test with Maven
+       - name: Build and test with Maven
         run: cd ./docker-compose/simple-api && mvn clean verify
