--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,34 @@ jobs:
      #finally build your app with the latest command
       - name: Build and test with Maven
         run: cd ./docker-compose/simple-api && mvn clean verify
+    
+	# define job to build and publish docker image
+  build-and-push-docker-image:
+    needs: test-backend
+    # run only when code is compiling and tests are passing
+    runs-on: ubuntu-22.04
+
+    # steps to perform in job
+    steps:
+      - name: Checkout code
+      uses: actions/checkout@v2.5.0
+
+      - name: Build image and push backend
+      uses: docker/build-push-action@v3
+      with:
+        # relative path to the place where source code with Dockerfile is located
+        context: ./simple-api
+        # Note: tags has to be all lower-case
+        tags:  ${{secrets.DOCKERHUB_LOGIN}}/backend:latest
+
+      - name: Build image and push database
+      uses: docker/build-push-action@v3
+      with :
+        context : ./database
+        tags : ${{secrets.DOCKERHUB_LOGIN}}/database:latest
+
+      - name: Build image and push httpd
+      uses: docker/build-push-action@v3
+      with :
+        context : ./httpd
+        tags : ${{secrets.DOCKERHUB_LOGIN}}/httpd:latest
