--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,14 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./simple-api
-          tags: ${{secrets.DOCKERHUB_LOGIN}}/backend:latest
+          tags: ${{secrets.DOCKERHUB_LOGIN}}/simonmachadocpe/backend:latest
       - name: Build image and push database
         uses: docker/build-push-action@v3
         with:
           context: ./database
-          tags: ${{secrets.DOCKERHUB_LOGIN}}/database:latest
+          tags: ${{secrets.DOCKERHUB_LOGIN}}/simonmachadocpe/database:latest
       - name: Build image and push httpd
         uses: docker/build-push-action@v3
         with:
           context: ./httpd
-          tags: ${{secrets.DOCKERHUB_LOGIN}}/httpd:latest
+          tags: ${{secrets.DOCKERHUB_LOGIN}}/simonmachadocpe/httpd:latest
