--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,15 @@ jobs:
       - name: Build image and push backend
         uses: docker/build-push-action@v3
         with:
-          context: ./simple-api
+          context: ./docker-compose/simple-api
           tags: ${{secrets.DOCKERHUB_LOGIN}}/backend:latest
       - name: Build image and push database
         uses: docker/build-push-action@v3
         with:
-          context: ./database
+          context: ./docker-compose/database
           tags: ${{secrets.DOCKERHUB_LOGIN}}/database:latest
       - name: Build image and push httpd
         uses: docker/build-push-action@v3
         with:
-          context: ./httpd
+          context: ./docker-compose/httpd
           tags: ${{secrets.DOCKERHUB_LOGIN}}/httpd:latest
