--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
           java-version: 17
           distribution: adopt
       - name: Build and test with Maven
-        run: cd ./docker-compose/simple-api && mvn clean verify
+        run: cd ./docker-compose/simple-api && mvn clean verify 
   build-and-push-docker-image:
     needs: test-backend
     runs-on: ubuntu-22.04
     steps:
+      - name: Login to DockerHub
+        run: docker login -u ${{ secrets.DOCKERHUB_LOGIN }} -p ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout code
         uses: actions/checkout@v2.5.0
       - name: Build image and push backend
@@ -26,6 +28,7 @@ jobs:
         with:
           context: ./docker-compose/simple-api
           tags: ${{secrets.DOCKERHUB_LOGIN}}/backend:latest
+          push: ${{ github.ref == 'refs/heads/main' }}
       - name: Build image and push database
         uses: docker/build-push-action@v3
         with:
