--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: 17
           distribution: adopt
       - name: Build and test with Maven
-        run: cd ./docker-compose/simple-api && mvn -B verify sonar:sonar -Dsonar.projectKey=SimonMachadoCPE_devops-sitot -Dsonar.organization=simonmachadocpe -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./docker-compose/simple-api/pom.xml
+        run: cd ./docker-compose/simple-api && mvn -B verify sonar:sonar -Dsonar.projectKey=SimonMachadoCPE_devops-sitot -Dsonar.organization=simonmachadocpe -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./pom.xml
 
   build-and-push-docker-image:
     needs: test-backend
